Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/PitchIQ_Assignment__c.object-meta.xml
<CustomObject>
    <label>PitchIQ Assignment</label>
    <nameField>
        <displayFormat>PIQ-{0000}</displayFormat>
        <label>PitchIQ Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PitchIQ Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>