Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/fields/Enablement_Program__c.field-meta.xml
<CustomField>
    <fullName>Enablement_Program__c</fullName>
    <label>Enablement Program</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>