Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/fields/LatestFeedback__c.field-meta.xml
<CustomField>
    <fullName>LatestFeedback__c</fullName>
    <label>Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>