Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/fields/NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttempts__c</fullName>
    <label>Number Of Attempts</label>
    <summaryForeignKey>PitchIQ_Attempt__c.PitchIQ_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>