Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/fields/Seller_User__c.field-meta.xml
<CustomField>
    <fullName>Seller_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PitchIQ_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>