Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/validationRules/Prevent_Edit_Without_Admin_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Without_Admin_Permission</fullName>
    <active>true</active>
    <description>Prevents any user without the PitchIQAdminAccess custom permission from editing any field on a PitchIQ Assignment record after it has been created.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT( $Permission.PitchIQAdminAccess )
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit PitchIQ Assignment records. Contact your Manager if changes are required.</errorMessage>
</ValidationRule>