Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Assignment__c/listViews/My_PitchIQ_Assignments.listView-meta.xml
<ListView>
    <fullName>My_PitchIQ_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Enablement_Program__c</columns>
    <columns>NumberOfAttempts__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Seller_User__c</field>
        <operation>equals</operation>
        <value>$USER</value>
    </filters>
    <label>My PitchIQ Assignments</label>
</ListView>